--- a/now.json
+++ b/now.json
@@ -2,14 +2,14 @@
     "version": 2,
     "name": "disqusjs-proxy",
     "alias": [
-        "yd-cfcz.vercel.app"
+        "ydtrinley.github.io"
     ],
     "routes": [
         {
             "src": "/(.*)",
             "headers": {
-                "cache-control": "public, max-age=21600"
-                "Access-Control-Allow-Origin":"https://vercel.app"
+                "cache-control": "public, max-age=21600",
+                "Access-Control-Allow-Origin":"https://ydtrinley.github.io"
             },
             "dest": "https://disqus.com/api/$1"
         }
